Move object storage operations to the backend

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,22 @@
+; DATABASE
 POSTGRES_PRISMA_URL=postgresql://postgres:1234@localhost
 POSTGRES_URL_NON_POOLING=postgresql://postgres:1234@localhost
 
-NEXT_PUBLIC_DEFAULT_CURRENCY_CODE=""
+; FEATURES
+NEXT_PUBLIC_DEFAULT_CURRENCY_CODE=
+NEXT_PUBLIC_ENABLE_CATEGORY_EXTRACT= ; Requires AI PROVIDER and OBJECT STORAGE
+NEXT_PUBLIC_ENABLE_EXPENSE_DOCUMENTS= ; Requires AI PROVIDER and OBJECT STORAGE
+
+; OBJECT STORAGE
+S3_UPLOAD_KEY=
+S3_UPLOAD_SECRET=
+S3_UPLOAD_BUCKET=
+S3_UPLOAD_REGION=
+S3_UPLOAD_ENDPOINT=
+NEXT_PUBLIC_S3_MAX_FILE_SIZE=
+
+; AI PROVIDER
+OPENAI_BASE_URL=
+OPENAI_API_KEY=
+OPENAI_IMAGE_MODEL= ; Required for NEXT_PUBLIC_ENABLE_EXPENSE_DOCUMENTS
+OPENAI_TEXT_MODEL= ; Required for NEXT_PUBLIC_ENABLE_CATEGORY_EXTRACT
