--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "generate-currency-data": "ts-node -T ./src/scripts/generateCurrencyData.ts"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.978.0",
+    "@aws-sdk/s3-request-presigner": "^3.978.0",
     "@formatjs/intl-localematcher": "^0.5.4",
     "@hookform/resolvers": "^3.3.2",
     "@json2csv/plainjs": "^7.0.6",
@@ -51,7 +53,6 @@
     "negotiator": "^0.6.3",
     "next": "^16.0.7",
     "next-intl": "^4.5.8",
-    "next-s3-upload": "^0.3.4",
     "next-themes": "^0.2.1",
     "next13-progressbar": "^1.1.1",
     "openai": "^4.25.0",
